--- a/PRACTICA 11/index.html
+++ b/PRACTICA 11/index.html
@@ -6,8 +6,36 @@
     <title>Reproductor de Musica</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Incluye Boostrap y Boostrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <!-- howler -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js" integrity="sha512-xi/RZRIF/S0hJ+yJJYuZ5yk6/8pCiRlEXZzoguSMl+vk2i3m6UjUO/WcZ11blRL/O+rnj94JRGwt/CHbc9+6EA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-    
+    <div class="container text-center my-4" >
+        <div class="card bg-secondary" id="music-card">
+            <img src="" alt="Portada del album" class="card-img-top img" id="albumCover">
+            <div class="card-body">
+                <h1 class="card-title" id="card-songTitle"></h1>
+                <p class="card-text" id="songArtist"></p>
+                <div class="btn-group">
+                    <button id="prev" class="btn btn-primary">Anterior</button>
+                    <button id="play" class="btn btn-success" title="Rreproducir">
+                        <i class="bi bi-play-fill"></i>
+                    </button>
+                    <button id="pause" class="btn btn-danger" title="Pausar">
+                        <i class="bi bi-pause-fill"></i>
+                    </button>
+                    <button id="next" class="btn btn-primary">Siguiente</button>
+                </div>
+                <div class="form-group" id="volumen-container">
+                    <label for="volumen">Volumen</label>
+                    <input id="volumen" class="form-control" type="range" min="0" max="1" step="0.01" value="0.5">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
