--- a/PRACTICA 15/index.html
+++ b/PRACTICA 15/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1 class="heading">Note app</h1>
-    <p class="info-text">Haz doble click para remover</p>
+    <h1 class="heading">Notes app</h1>
+    <p class="info-text">Haz doble click para eliminar una nota15</p>
     <div class="app" id="app">
         <button class="btn" id="btn">+</button>
-
     </div>
 
     <script src="./js/script.js"></script>
